#ifndef HUD_H
#define HUD_H

#include "Player.h"

class HUD {
public:
    static void Draw(const Player& player);
};

#endif
